--- a/src/main/resources/com/fastwriting/gameView.fxml
+++ b/src/main/resources/com/fastwriting/gameView.fxml
@@ -24,7 +24,7 @@
             </Label>
             <TextField fx:id="myInput" layoutX="208.0" layoutY="385.0" onAction="#enter" onKeyPressed="#detectKey" prefHeight="26.0" prefWidth="499.0" />
             <Label fx:id="labelPhrases" alignment="CENTER" layoutX="74.0" layoutY="125.0" prefHeight="152.0" prefWidth="788.0" text="FRASES" textFill="#513c3c" />
-            <ImageView fx:id="myImage" fitHeight="32.0" fitWidth="40.0" layoutX="724.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imageValidator" fitHeight="32.0" fitWidth="40.0" layoutX="724.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
       <Pane prefHeight="85.0" prefWidth="1004.0" style="-fx-background-color: #fffff;">
