--- a/src/main/resources/com/fastwriting/statisticsWindow.fxml
+++ b/src/main/resources/com/fastwriting/statisticsWindow.fxml
@@ -48,6 +48,7 @@
       <TextField fx:id="text1" accessibleText="False" alignment="CENTER" editable="false" layoutX="270.0" layoutY="144.0" />
       <TextField fx:id="text3" alignment="CENTER" editable="false" layoutX="270.0" layoutY="303.0" />
       <TextField fx:id="text2" alignment="CENTER" editable="false" layoutX="270.0" layoutY="223.0" />
-      <Button fx:id="closeGame" layoutX="180.0" layoutY="387.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="139.0" text="Close Game" />
+      <Button fx:id="closeGame" layoutX="281.0" layoutY="390.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="40.0" prefWidth="139.0" text="Close Game" />
+      <Button fx:id="playAgain" layoutX="41.0" layoutY="390.0" mnemonicParsing="false" onAction="#playAgainAction" prefHeight="40.0" prefWidth="139.0" text="Play Again" />
    </children>
 </Pane>
