--- a/src/main/resources/com/fastwriting/gameView.fxml
+++ b/src/main/resources/com/fastwriting/gameView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,37 +10,33 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fastwriting.controler.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="936.0" styleClass="root" stylesheets="@CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fastwriting.controler.Controller">
     <children>
-        <Pane prefHeight="477.0" prefWidth="951.0" style="-fx-background-color: #ECF0F1;">
+        <Pane prefHeight="567.0" prefWidth="936.0" styleClass="pane">
             <children>
-                <Label fx:id="labelLevel" alignment="CENTER" layoutX="222.0" layoutY="25.0" prefHeight="100.0" prefWidth="522.0" text="AQUI SE INDICA NIVEL" textFill="WHITE">
-                    <font>
-                        <Font size="30.0" />
-                    </font>
-                </Label>
-                <Label fx:id="labelMessage" alignment="CENTER" layoutX="257.0" layoutY="295.0" prefHeight="67.0" prefWidth="422.0">
-                    <font>
-                        <Font size="22.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="myInput" layoutX="208.0" layoutY="385.0" onAction="#enter" onKeyPressed="#detectKey" prefHeight="26.0" prefWidth="499.0" />
-                <Label fx:id="labelPhrases" alignment="CENTER" layoutX="74.0" layoutY="125.0" prefHeight="152.0" prefWidth="788.0" text="FRASES" textFill="#513c3c" />
+                <Label fx:id="labelLevel" alignment="CENTER" layoutX="202.0" layoutY="29.0" prefHeight="100.0" prefWidth="522.0" text="AQUI SE INDICA NIVEL" />
+                <Label fx:id="labelMessage" alignment="CENTER" layoutX="276.0" layoutY="257.0" prefHeight="88.0" prefWidth="384.0" styleClass="heavy-metal-button" textFill="#3ed0c6">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <stylesheets>
+                  <URL value="@CSS/heavy-metal-style.css" />
+                  <URL value="@CSS/style.css" />
+               </stylesheets></Label>
+                <TextField fx:id="myInput" layoutX="220.0" layoutY="384.0" onAction="#enter" onKeyPressed="#detectKey" prefHeight="29.0" prefWidth="481.0" />
+                <Label fx:id="labelPhrases" alignment="CENTER" layoutX="79.0" layoutY="171.0" prefHeight="71.0" prefWidth="780.0" text="FRASES" />
                 <ImageView fx:id="imageValidator" fitHeight="32.0" fitWidth="40.0" layoutX="724.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
-            </children>
-        </Pane>
-        <Pane prefHeight="85.0" prefWidth="1004.0" style="-fx-background-color: #fffff;">
-            <children>
-                <ImageView fx:id="myImageTimer" fitHeight="59.0" fitWidth="66.0" layoutX="468.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                <Button fx:id="closeGame" layoutX="175.0" layoutY="475.0" mnemonicParsing="false" onAction="#closeGame" prefHeight="39.0" prefWidth="89.0" styleClass="heavy-metal-button" text="Close" />
+                <Button fx:id="playAgain" layoutX="26.0" layoutY="475.0" onAction="#playAgain" prefHeight="39.0" prefWidth="104.0" styleClass="heavy-metal-button" text="Play Again" />
+                <ImageView fx:id="myImageTimer" fitHeight="59.0" fitWidth="66.0" layoutX="838.0" layoutY="465.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@images/timer.png" />
                     </image>
                 </ImageView>
-                <Label fx:id="myTimer" alignment="CENTER" layoutX="385.0" layoutY="11.0" prefHeight="59.0" prefWidth="66.0" text="20">
-                    <font>
-                        <Font size="42.0" />
-                    </font>
-                </Label>
+                <Label fx:id="myTimer" alignment="CENTER" layoutX="785.0" layoutY="472.0" prefHeight="46.0" prefWidth="47.0" text="20">
+               <font>
+                  <Font size="32.0" />
+               </font></Label>
             </children>
         </Pane>
     </children>
