--- a/src/main/resources/com/fastwriting/startWindow.fxml
+++ b/src/main/resources/com/fastwriting/startWindow.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fastwriting.controler.StartController">
-   <children>
-      <Button fx:id="startButton" layoutX="276.0" layoutY="232.0" mnemonicParsing="false" onAction="#handleStartButton" text="Button" />
-   </children>
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="906.0" stylesheets="@CSS/heavy-metal-style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fastwriting.controler.StartController"> <children>
+    <Button fx:id="startButton" layoutX="325.0" layoutY="296.0" mnemonicParsing="false" onAction="#handleStartButton" prefHeight="61.0" prefWidth="291.0" styleClass="heavy-metal-button" text="START" />
+      <Button fx:id="rules" layoutX="26.0" layoutY="373.0" mnemonicParsing="false" onAction="#rules" prefHeight="41.0" prefWidth="63.0" styleClass="heavy-metal-button" stylesheets="@CSS/statistic.css" text="?" />
+</children>
 </Pane>
